# Bad_apple_framework

./: .gitignore  vercel.json
bad-apple-rs/: .gitignore  Cargo.toml  README.md
bad-apple-rs/font/: consola_ascii_0_ff.data  consola_ascii_0_ff.h  font.py
bad-apple-rs/src/: audio.rs  cli.rs  decoder.rs  encoder.rs  main.rs  printer.rs  web_server.rs
bad-apple-wasm/: Cargo.toml
bad-apple-wasm/pkg/: bad_apple_wasm.d.ts  bad_apple_wasm.js  bad_apple_wasm_bg.wasm  bad_apple_wasm_bg.wasm.d.ts  package.json
bad-apple-wasm/src/: font.rs  lib.rs
bad-apple-web/: index.html  package-lock.json  package.json  server.ts
bad-apple-web/api/: get-stream.ts
bad-apple-web/src/: App.tsx  index.css
