[package]
name = "bad-apple-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
rayon = "1.11.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["rustls"] }
rodio = { version = "0.20.1", features = ["symphonia-aac", "symphonia-isomp4", "symphonia-mp3"] }
symphonia = "0.5.5"
tokio = { version = "1.50.0", features = ["fs", "full", "io-util", "macros", "process", "rt-multi-thread"] }
youtube_dl = { version = "0.10.0", features = ["reqwest", "tokio"] }
