[package]
name = "bad-apple-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
base64 = "0.22.1"
clap = { version = "4.5.60", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
futures-util = "0.3.32"
rayon = "1.11.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["rustls"] }
rodio = { version = "0.20.1", features = ["symphonia-aac", "symphonia-isomp4", "symphonia-mp3"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
symphonia = "0.5.5"
tokio = { version = "1.50.0", features = ["fs", "full", "io-util", "macros", "process", "rt-multi-thread"] }
tokio-stream = "0.1.18"
tower-http = { version = "0.6.8", features = ["fs", "cors"] }
webbrowser = "1.1.0"
youtube_dl = { version = "0.10.0", features = ["reqwest", "tokio"] }
